  * Included example configuration file for use in installing a pool layout for
    another OS distribution. Closes: #455439
  * Have debpool check for Proc::Daemon before attempting to run as daemon.
    + Closes: #455449
  * Have debpool handle bzip2 compression as well as gzip in dynamical fasion.
    + Thanks Magnus Holmgren.
    + Still supporting Gzip interactions using gzip package.
    + Closes: #415447
  * Added inotify2 support. Closes: #415272
    + Thanks Magnus Holmgren.
    + Needs liblinux-inotify2-perl so adding a Recommends.
  * Allow Release files to generate SHA256 checksums as well.
    + Needs libdigest-sha-perl so changed debian/control accordingly.
  * Fixed problem where reuploading an orig tarball would be rejected
    even with the 'rollback' option set.
  * Bumped Standards-Version to 3.7.3.
    + Removed 'binary-arch' target in debian/rules to silence new lintian
      warning.
  * Fixed problem where 'release_noauto' could not be overridden.
  * Use $ENV{'HOME'} instead of '/home/user' for specifying home directory
    through environment variable in Config.pm.
  * Autogenerate man page for DebPool::Config during build.
  * Wrote a proper manpage for debpool.
  * Minor edit in description for DebPool::Config.
  * Changed copyright format, included myself in copyright.
  * Removed LICENSE file, as it was redundant to debian/copyright.
  * Changed Maintainer to use debpool developer's email.
    + Added Joel Aelwyn in Uploaders field.

 -- Andres Mejia <mcitadel@gmail.com>  Tue, 08 Jan 2008 02:06:32 -0500

debpool (0.2.3) experimental; urgency=low

  * Handle sections with no subsection more usefully in
    Strip_Subsection. (Closes: #317390, #319959)
  * Refactor various bits to use Strip_Subsection, rather than re-
    implementing it badly. I don't know what on earth I was thinking,
    but things should behave better now. (Closes: #320062)
  * Don't hardcode the pool base path as 'pool'; determine it from