@@ -505,20 +505,36 @@ Default value: "$Options{'archive_dir'}/.lock"
 $Options{'lock_file'} = "$Options{'archive_dir'}/.lock";
 $OptionDefs{'lock_file'} = 'lock_file=s';
 
-=item B<get_lock_path> => I<get lock path>
+=item B<get_lock_path> => I<boolean>
 
 Display the full path set for the lock file and exit. This is mainly used
-to run debpool as a daemon with start-stop-daemon.
+to determine the path set for the lock file from a system's or user's
+default configuration.
+
+Default value: 0 (false)
 
 =cut
 
 $Options{'get_lock_path'} = 0;
 $OptionDefs{'get_lock_path'} = 'get_lock_path!';
 
+=back
+
+=cut
+
+=head2 Compression configuration
+
+These values control what formats will be used to compress the
+distribution files (Packages, Sources).
+
+=over 4
+
 =item B<compress_dists> = I<boolean>
 
 This determines whether or not compressed versions of the distribution
 files (Packages.gz, Sources.gz) are generated in gzip.
+
+Default value: 0 (false)
 
 =cut
 
@@ -532,6 +548,8 @@ files (Packages.gz, Sources.gz) are generated.in gzip using Compress::Zlib.
 Note that enabling this introduces a dependency on libcompress-zlib-perl.
 Enabling this option will override compress_dists.
 
+Default value: 0 (false)
+
 =cut
 
 $Options{'compress_dists_with_zlib'} = 0;
@@ -541,6 +559,8 @@ $OptionDefs{'compress_dists_with_zlib'} = 'compress_dists_with_zlib!';
 
 This determines whether or not compressed versions of the distribution
 files (Packages.gz, Sources.gz) are generated in bzip2.
+
+Default value: 0 (false)
 
 =cut
 
@@ -568,19 +588,19 @@ strange (and non-deterministic) consequences for Release files.
 
 Default value:
 
-{   'stable' => 'woody',
-    'testing' => 'sarge',
-    'unstable' => 'sid',
-    'experimental' => 'experimental' }
+{ 'stable' => 'etch',
+'testing' => 'lenny',
+'unstable' => 'sid',
+'experimental' => 'experimental' }
 
 =cut
 
 $Options{'dists'} = {
-    'stable' => 'woody',
-    'testing' => 'sarge',
+    'stable' => 'etch',
+    'testing' => 'lenny',
     'unstable' => 'sid',
     'experimental' => 'experimental'
-};
+    };
 $OptionDefs{'dists'} = 'dists=s%';
 
 =item B<virtual_dists> => I<hash of virtual distribution names and targets>
@@ -596,28 +616,24 @@ which appears in the 'dists' hash.
 
 Default value:
 
-{
-}
+{}
 
-Exsample value:
+Example value:
 
-{   'unstable-hostname' => 'unstable',
-    'testing-hostname' => 'sarge',
-}
+{ 'unstable-hostname' => 'unstable',
+  'testing-hostname' => 'sarge', }
 
 =cut
 
-$Options{'virtual_dists'} = {
-};
+$Options{'virtual_dists'} = {};
+$OptionDefs{'virtual_dists'} = 'virtual_dists=s%';
 
 =item B<sections> => I<array of section names>
 
 An arrayref pointing to an array which lists all sections we will accept
-packages for. Typically, these will be drawn from the set 'main',
-'contrib', 'non-free', 'experimental', 'alien', and 'local' (at least on
-the author's systems).
+packages for.
 
-Default value: [ 'main', 'contrib', 'non-free' ]
+Default value: [ 'main', 'contrib', 'non-free', 'debian-installer' ]
 
 =cut
 
@@ -642,12 +658,12 @@ $OptionDefs{'archs'} = 'archs=s@';
 
 =head2 Release configuration
 
-If all of the variables below are defined (release_origin, release_label,
-and release_description), Release files will be generated for each
-distribution directory.
+If the variables 'release_origin', 'release_label', and
+'release_description' are defined, Release files will be generated
+for each distribution directory.
 
 Please note that enabling Release files will introduce a dependancy on the
-packages 'libdigest-md5-perl' and 'libdigest-sha1-perl'.
+package 'libdigest-sha-perl'.
 
 See also: sign_release
 
@@ -748,7 +764,7 @@ $OptionDefs{'require_sigs_meta'} = 'require_sigs_meta!';
 
 =item B<sign_release> = I<boolean>
 
-If true, generated Release files with be GPG-signed with the key specified
+If true, generated Release files will be GPG-signed with the key specified
 in 'gpg_sign_key'.
 
 Note that this will have no effect unless 'gpg_sign_key' is also defined at
@@ -939,7 +955,8 @@ $OptionDefs{'rebuild-files'} = 'rebuild-files!';
 
 This option should not be set in configfiles, only used from the
 commandline; if set, it forces all of the metadata files to be rebuilt from
-scratch. It should, of course, also not be used with the daemon option.
+scratch. This should almost never be used in conjunction with the daemon
+option.
 
 WARNING: This feature is not yet implemented, and will (silently) fail to
 do anything, at this time. It will be implemented in a future version.
@@ -1003,6 +1020,9 @@ L<debpool(1)>
 =head1 AUTHOR
 
 Joel Baker <fenton@debian.org>
+
+This manpage is autogenerated from F<share/DebPool/Config.pm> of the
+source package during build time using pod2man.
 
 =cut
 
